# DuplicatiIndexer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-tests.yml
jsonpy/: __main__.py  create.py  search.py  utilities.py
tests/: test_jsonpy.py  test_jsonpy_cli.py
tests/resources/: sample_filelist.json
