[tool.poetry]
name = "jsonpy"
version = "0.1.0"
description = ""
authors = ["Harry Peach (Personal Signing Key) <harrypeach1999@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ijson = "^3.1.4"
autopep8 = "^1.5.7"
marisa-trie = "^0.7.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylama = "^7.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
