[tool.poetry]
name = "jsonpy"
version = "0.1.0"
description = ""
authors = ["Harry Peach (Personal Signing Key) <harrypeach1999@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ijson = "^3.1.4"
marisa-trie = "^0.7.6"
typer = "^0.3.2"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.7"
pylama = "^7.7.1"
expects = "^0.9.0"
pytest-sugar = "^0.9.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
